--- a/index.html
+++ b/index.html
@@ -7,94 +7,94 @@
     <link href="https://fonts.cdnfonts.com/css/sf-mono" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta charset="UTF-8">
     <title></title>
 </head>
 
-<body id="body">
-    <div id="firstPage">
-        <div id="top">
-            <h1 class="ROSE"><img width="235px" height="30px" src="C:\Users\matus\Desktop\проект\rose.png" alt=""></h1>
-            <div id="wholeBurger">
+<body class="body">
+    <div >
+        <div class="top">
+            <h1 class="ROSE"><img width="235px" height="30px" src="rose.png" alt=""></h1>
+            <div class="wholeBurger">
                 <div class="topPartOfTheBurger"></div>
                 <div class="middlePartOfTheBurger"></div>
                 <div class="bottomPartOfTheBurger"></div>
             </div>
         </div>
         <div>
-            <img id="topPhoto" width="375px" height="235px"
-                src="C:\Users\matus\Desktop\проект\imgonline-com-ua-Resize-urNhT9kARoZ94SZ.jpg">
+            <img class="topPhoto" width="375px" height="235px"
+                src="imgonline-com-ua-Resize-urNhT9kARoZ94SZ.jpg">
         </div>
-        <div id="textAfterTop">
-            <div id="aboutBlog">A few words about this blog platform, Ghost, and how this site was made</div>
-            <div id="smallTextAboutBlog">Why Ghost (& Figma) instead of Medium, WordPress or other options?</div>
+        <div class="textAfterTop">
+            <div class="aboutBlog">A few words about this blog platform, Ghost, and how this site was made</div>
+            <div class="smallTextAboutBlog">Why Ghost (& Figma) instead of Medium, WordPress or other options?</div>
         </div>
-        <div id="lineOfFirstPage"></div>
+        <div class="lineOfFirstPage"></div>
     </div>
-    <div id="secondPage">
-        <div id="articles">All articles</div>
+    <div class="secondPage">
+        <div class="articles">All articles</div>
         <div>
             <img class="secondPagePhotosFIRST" width="335px" height="194px"
-                src="C:\Users\matus\Desktop\проект\imgonline-com-ua-Resize-bAyRCik3GxZyxPP7.jpg" alt="">
-            <div id="OFFF"class="textAfterImages">Granny gives everyone the finger, and other tips from OFFF Barcelona</div>
+                src="imgonline-com-ua-Resize-bAyRCik3GxZyxPP7.jpg" alt="">
+            <div class="OFFF" >Granny gives everyone the finger, and other tips from OFFF Barcelona</div>
         </div>
         <div>
             <img class="secondPagePhotos" width="335px" height="194px"
-                src="C:\Users\matus\Desktop\проект\imgonline-com-ua-Resize-XOzt5UX5xp2iXq.jpg" alt="">
-            <div id="helloWorld" class="textAfterImages">Hello world, or, in other words, why this blog exists</div>
+                src="imgonline-com-ua-Resize-XOzt5UX5xp2iXq.jpg" alt="">
+            <div class="helloWorld">Hello world, or, in other words, why this blog exists</div>
         </div>
         <div>
             <img class="secondPagePhotos" width="335px" height="194px"
-                src="C:\Users\matus\Desktop\проект\imgonline-com-ua-Resize-wwIuzf7bbgI.jpg" alt="">
-            <div id="regarding" class="textAfterImages">Here are some things you should know regarding how we work </div>
+                src="imgonline-com-ua-Resize-wwIuzf7bbgI.jpg" alt="">
+            <div class="regarding">Here are some things you should know regarding how we work </div>
         </div>
         <div>
             <img class="secondPagePhotos" width="335px" height="194px"
-                src="C:\Users\matus\Desktop\проект\imgonline-com-ua-Resize-T3EhyoGpwJ.jpg" alt="">
-            <div  id="updatingList" class="textAfterImages">Updating list of 50+ sources on distributed teams,
+                src="imgonline-com-ua-Resize-T3EhyoGpwJ.jpg" alt="">
+            <div  class="updatingList">Updating list of 50+ sources on distributed teams,
                 remote work, and how to make it all work better</div>
         </div>
         <div>
             <img class="secondPagePhotos" width="335px" height="194px"
-                src="C:\Users\matus\Desktop\проект\imgonline-com-ua-Resize-aZU0MMuMOA5pq.jpg" alt="">
-            <div id="fewWordd" class="textAfterImages">A few words about this blog platform, Ghost, and how this
+                src="imgonline-com-ua-Resize-aZU0MMuMOA5pq.jpg" alt="">
+            <div class="fewWordd">A few words about this blog platform, Ghost, and how this
                 site was made</div>
         </div>
         <div>
             <img class="secondPagePhotos" width="335px" height="194px"
-                src="C:\Users\matus\Desktop\проект\imgonline-com-ua-Resize-X8Lnt3rhtf0Q.jpg" alt="">
-            <div id="modern" class="textAfterImages">How modern remote working tools get along with Old
+                src="imgonline-com-ua-Resize-X8Lnt3rhtf0Q.jpg" alt="">
+            <div class="modern" >How modern remote working tools get along with Old
                 School Cowboy's methods
             </div>
         </div>
-        <div id="blackSquare">
-            <div id="squareFirstText">
+        <div class="blackSquare">
+            <div class="squareFirstText">
 
-                <div class="textCenter" id="DIGITAL" class="boldText">DIGITAL PRODUCT DESIGN&nbsp;</div>
-                <div class="textCenter" id="work">REMOTE WORK&nbsp;</div>
-                <div class="textCenter" id="US" class="boldText">UX DESIGN&nbsp;</div>
-                <div class="textCenter" id="teams">DISTRIBUTED TEAMS&nbsp;</div>
-                <div class="textCenter" id="creativity" class="boldText">CREATIVITY&nbsp;</div>
-                <div class="textCenter" id="strategy">STRATEGY&nbsp;</div>
-                <div class="textCenter" id="suspense" class="boldText">SUSPENSE&nbsp;</div>
-                <div class="textCenter" id="growth">GROWTH&nbsp;</div>
+                <div class="textCenter" class="DIGITAL" class="boldText">DIGITAL PRODUCT DESIGN&nbsp;</div>
+                <div class="textCenter" class="work">REMOTE WORK&nbsp;</div>
+                <div class="textCenter" class="US" class="boldText">UX DESIGN&nbsp;</div>
+                <div class="textCenter" class="teams">DISTRIBUTED TEAMS&nbsp;</div>
+                <div class="textCenter" class="creativity" class="boldText">CREATIVITY&nbsp;</div>
+                <div class="textCenter" class="strategy">STRATEGY&nbsp;</div>
+                <div class="textCenter" class="suspense" class="boldText">SUSPENSE&nbsp;</div>
+                <div class="textCenter" class="growth">GROWTH&nbsp;</div>
             </div>
 
-            <div id="informationText">
-                <div id="bottomRose"><img width="245px" height="35px"
-                        src="C:\Users\matus\Desktop\проект\NORDIC ROSE.png" alt="">
+            <div class="informationText">
+                <div class="bottomRose"><img width="245px" height="35px"
+                        src="NORDIC ROSE.png" alt="">
                 </div>
 
-                <div id="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
+                <div class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
                     egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</div>
-                <div id="links">
+                <div class="links">
                     <div class="oneLink">Twitter</div>
-                    <div id="Linkedln" class="oneLink">Linkedln</div>
+                    <div class="Linkedln" class="oneLink">Linkedln</div>
                     <div class="oneLink">RSS</div>
                 </div>
-                <div id="authors">© 2012–2020 Nordic Rose Co. All rights reserved</div>
+                <div class="authors">© 2012–2020 Nordic Rose Co. All rights reserved</div>
             </div>
 
 
