cjrrected mobile version

--- a/index.html
+++ b/index.html
@@ -10,89 +10,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta charset="UTF-8">
-    <title></title>
+    <title>Nordic Rose</title>
 </head>
 
 <body class="body">
-    <div >
+    <div>
         <div class="top">
-            <h1 class="ROSE"><img width="235px" height="30px" src="rose.png" alt=""></h1>
-            <div class="wholeBurger">
-                <div class="topPartOfTheBurger"></div>
-                <div class="middlePartOfTheBurger"></div>
-                <div class="bottomPartOfTheBurger"></div>
+            <h1 class="desctope_rose_block"><img class="desktop_rose" width="395.83px" height="37.53px"
+                    src="photos\desktop_rose.png" alt=""></h1>
+            <h1 class="rose"><img class="img_rose"  src="photos\rose.png" alt=""></h1>
+            <div class="desktop_menu">
+                <div class="first_part">BLOG</div>
+                <div class="second_part">ABOUT</div>
+                <div class="third_part">LINKS</div>
+                <div class="fouth_part">PROJECTS</div>
+            </div>
+            <div class="whole_burger">
+                <div class="top_part_of__the_burger"></div>
+                <div class="middle_part_of__the_burger"></div>
+                <div class="bottom_part_of__the_burger"></div>
             </div>
         </div>
+
         <div>
-            <img class="topPhoto" width="375px" height="235px"
-                src="imgonline-com-ua-Resize-urNhT9kARoZ94SZ.jpg">
+
+            <img class="top_photo" width="375px" height="235px"   src="photos\imgonline-com-ua-Resize-urNhT9kARoZ94SZ.jpg">
         </div>
-        <div class="textAfterTop">
-            <div class="aboutBlog">A few words about this blog platform, Ghost, and how this site was made</div>
-            <div class="smallTextAboutBlog">Why Ghost (& Figma) instead of Medium, WordPress or other options?</div>
+        <div>
+            <div class="about_blog">A few words about this blog platform, Ghost, and how this site was made</div>
+            <div class="small_text_about_blog">Why Ghost (& Figma) instead of Medium, WordPress or other options?</div>
         </div>
-        <div class="lineOfFirstPage"></div>
+        <div class="line_of_first_page"></div>
     </div>
-    <div class="secondPage">
+    <div class="second_page">
         <div class="articles">All articles</div>
-        <div>
-            <img class="secondPagePhotosFIRST" width="335px" height="194px"
-                src="imgonline-com-ua-Resize-bAyRCik3GxZyxPP7.jpg" alt="">
-            <div class="OFFF" >Granny gives everyone the finger, and other tips from OFFF Barcelona</div>
-        </div>
-        <div>
-            <img class="secondPagePhotos" width="335px" height="194px"
-                src="imgonline-com-ua-Resize-XOzt5UX5xp2iXq.jpg" alt="">
-            <div class="helloWorld">Hello world, or, in other words, why this blog exists</div>
-        </div>
-        <div>
-            <img class="secondPagePhotos" width="335px" height="194px"
-                src="imgonline-com-ua-Resize-wwIuzf7bbgI.jpg" alt="">
-            <div class="regarding">Here are some things you should know regarding how we work </div>
-        </div>
-        <div>
-            <img class="secondPagePhotos" width="335px" height="194px"
-                src="imgonline-com-ua-Resize-T3EhyoGpwJ.jpg" alt="">
-            <div  class="updatingList">Updating list of 50+ sources on distributed teams,
-                remote work, and how to make it all work better</div>
-        </div>
-        <div>
-            <img class="secondPagePhotos" width="335px" height="194px"
-                src="imgonline-com-ua-Resize-aZU0MMuMOA5pq.jpg" alt="">
-            <div class="fewWordd">A few words about this blog platform, Ghost, and how this
-                site was made</div>
-        </div>
-        <div>
-            <img class="secondPagePhotos" width="335px" height="194px"
-                src="imgonline-com-ua-Resize-X8Lnt3rhtf0Q.jpg" alt="">
-            <div class="modern" >How modern remote working tools get along with Old
-                School Cowboy's methods
+        <div class="columns">
+            <div>
+                <img class="second_page_photos_first" width="304px" height="178px" src="photos\imgonline-com-ua-Resize-bAyRCik3GxZyxPP7.jpg" alt="Granny gives everyone the finger">
+                <div class="standart_height78">
+                    <div class="text_after_images">Granny gives everyone the finger, and other tips from OFFF
+                        Barcelona</div>
+                </div>
             </div>
-        </div>
-        <div class="blackSquare">
-            <div class="squareFirstText">
-
-                <div class="textCenter" class="DIGITAL" class="boldText">DIGITAL PRODUCT DESIGN&nbsp;</div>
-                <div class="textCenter" class="work">REMOTE WORK&nbsp;</div>
-                <div class="textCenter" class="US" class="boldText">UX DESIGN&nbsp;</div>
-                <div class="textCenter" class="teams">DISTRIBUTED TEAMS&nbsp;</div>
-                <div class="textCenter" class="creativity" class="boldText">CREATIVITY&nbsp;</div>
-                <div class="textCenter" class="strategy">STRATEGY&nbsp;</div>
-                <div class="textCenter" class="suspense" class="boldText">SUSPENSE&nbsp;</div>
-                <div class="textCenter" class="growth">GROWTH&nbsp;</div>
+            <div>
+                <img class="second_page_photos" width="304px" height="178px" src="photos\imgonline-com-ua-Resize-XOzt5UX5xp2iXq.jpg" alt="Hello world">
+                <div class="hello_world">
+                    <div class="text_after_images">Hello world, or, in other words, why this blog exists
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img class="second_page_photos" width="304px" height="178px" src="photos\imgonline-com-ua-Resize-wwIuzf7bbgI.jpg" alt="regarding how wework">
+                <div class="standart_height78">
+                    <div class="text_after_images">Here are some things you should know regarding how wework </div>
+                </div>
+            </div>
+            <div>
+                <img class="second_page_photos" width="304px" height="178px" src="photos\imgonline-com-ua-Resize-T3EhyoGpwJ.jpg" alt="remote work">
+                <div >
+                    <div class="text_after_images_margins">Updating list of 50+ sources on distributed teams, remote work, and
+                        how to make it all work better</div>
+                </div>
+            </div>
+            <div>
+                <img class="second_page_photos" width="304px" height="178px" src="photos\imgonline-com-ua-Resize-aZU0MMuMOA5pq.jpg" alt="A few words about this blog platform">
+                <div class="standart_height78">
+                    <div class="text_after_images">A few words about this blog platform, Ghost, and how this site was
+                        made</div>
+                </div>
+            </div>
+            <div>
+                <img class="second_page_photos" width="304px" height="178px" src="photos\imgonline-com-ua-Resize-X8Lnt3rhtf0Q.jpg" alt="modern remote working">
+                <div class="modern">
+                    <div class="text_after_images">How modern remote working tools get along with Old School Cowboy's
+                        methods
+                    </div>
+                </div>
             </div>
 
-            <div class="informationText">
-                <div class="bottomRose"><img width="245px" height="35px"
-                        src="NORDIC ROSE.png" alt="">
+        </div>
+
+        <div class="black_square">
+            <div class="square_first_text">
+
+                <div  class="bold_text_center" >DIGITAL PRODUCT DESIGN</div>
+                <div class="text_сenter" class="work">REMOTE WORK</div>
+                <div  class="bold_text_center" >UX DESIGN</div>
+                <div class="text_сenter" class="teams">DISTRIBUTED TEAMS</div>
+                <div  class="bold_text_center" >CREATIVITY</div>
+                <div class="text_сenter" class="strategy">STRATEGY</div>
+                <div  class="bold_text_center" >SUSPENSE</div>
+                <div class="text_сenter" class="growth">GROWTH</div>
+            </div>
+
+            <div class="text_сenter">
+                <div class="bottom_rose"><img width="245px" height="35px" src="photos\NORDIC ROSE.png" alt="">
                 </div>
 
                 <div class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
                     egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</div>
                 <div class="links">
-                    <div class="oneLink">Twitter</div>
-                    <div class="Linkedln" class="oneLink">Linkedln</div>
-                    <div class="oneLink">RSS</div>
+                    <div class="one_link">Twitter</div>
+                    <div  class="one_link">Linkedln</div>
+                    <div class="one_link">RSS</div>
                 </div>
                 <div class="authors">© 2012–2020 Nordic Rose Co. All rights reserved</div>
             </div>
