--- a/index.html
+++ b/index.html
@@ -1,142 +1,136 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.cdnfonts.com/css/new-york-extra-large" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/sf-mono" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <meta charset="UTF-8">
     <title>Nordic Rose</title>
 </head>
 
-<body class="body">
-    <div>
-        <div class="top">
-            <h1 class="rose">
+<body>
+    <header class="header">
+
+        <div class="top_padding_nordic">
+            <h1>
                 <picture>
                     <source media="(max-width:854px)" srcset="photos\mobile_rose.png" />
                     <source media="(min-width:854px)" srcset="photos\desktop_rose.png" />
-                    <img class="img_rose" src="photos\mobile_rose.png" alt="NORDIC ROSE">
+                    <img class="rose" width="217px" height="24px" src="photos\mobile_rose.png" alt="NORDIC ROSE">
                 </picture>
             </h1>
-            <div class="desktop_menu">
-                <div class="first_part">BLOG</div>
-                <div class="second_part">ABOUT</div>
-                <div class="third_part">LINKS</div>
-                <div class="fouth_part">PROJECTS</div>
-            </div>
-            <div class="whole_burger">
-                <div class="top_part_of__the_burger"></div>
-                <div class="middle_part_of__the_burger"></div>
-                <div class="bottom_part_of__the_burger"></div>
-            </div>
         </div>
 
-        <div>
-            <picture>
-                <source media="(max-width:854px)" srcset="photos\top_photo_mobile.jpg" />
-                <source media="(min-width:854px)" srcset="photos\desktop.jpg" />
-                <img class="top_photo" src="photos\top_photo_mobile.jpg">
-            </picture>
+        <div class="top_padding_burger"><img width="25px" height="16px" src="photos\burger.png" alt="burger">
+        </div>
+    </header>
+    <artcile>
 
-        </div>
-        <div>
-            <div class="about_blog">A few words about this blog platform, Ghost, and how this site was made</div>
-            <div class="small_text_about_blog">Why Ghost (& Figma) instead of Medium, WordPress or other options?</div>
-        </div>
-        <div class="line_of_first_page"></div>
-    </div>
-    <div class="second_page">
-        <div class="articles">All articles</div>
-        <div class="flex_columns">
-            <div class="attribute">
-                <img class="second_page_photos_first" width="304px" height="176px" src="photos\1.jpg"
+        <section class="top_section">
+            <div>
+                <picture>
+                    <source media="(max-width:854px)" srcset="photos\top_photo_mobile.jpg" />
+                    <source media="(min-width:854px)" srcset="photos\desktop.jpg" />
+                    <img src="photos\top_photo_mobile.jpg">
+                </picture>
+            </div>
+
+            <div>
+                <h2 class="about_blog">A few words about this blog platform, Ghost, and how this site was made</h2>
+                <h3 class="small_text_about_blog">Why Ghost (& Figma) instead of Medium, WordPress or other options?
+                </h3>
+            </div>
+
+        </section>
+        <section class="section_with_photo">
+            <h2 class="articles">All articles</h2>
+            <div class="atribute">
+                <img class="second_page_photos" width="304px" height="176px" src="photos\1.jpg"
                     alt="Granny gives everyone the finger">
                 <div>
-                    <div class="text_after_images_78">Granny gives everyone the finger, and other tips from OFFF
-                        Barcelona</div>
+                    <p class="text_after_images">Granny gives everyone the finger, and other tips from OFFF
+                        Barcelona</p>
                 </div>
             </div>
-            <div class="attribute">
+            <div class="atribute">
                 <img class="second_page_photos" width="304px" height="176px" src="photos\2.jpg" alt="Hello world">
-                <div class="hello_world">
-                    <div class="text_after_images">Hello world, or, in other words, why this blog exists
-                    </div>
+                <div>
+                    <p class="text_after_images">Hello world, or, in other words, why this blog exists
+                    </p>
                 </div>
             </div>
-            <div class="attribute">
+            <div class="atribute">
                 <img class="second_page_photos" width="304px" height="176px" src="photos\3.jpg"
                     alt="regarding how wework">
-                <div >
-                    <div class="text_after_images">Here are some things you should know regarding how wework </div>
+                <div>
+                    <p class="text_after_images">Here are some things you should know regarding how we work </p>
                 </div>
             </div>
-            <div class="attribute">
+            <div class="atribute">
                 <img class="second_page_photos" width="304px" height="176px" src="photos\4.jpg" alt="remote work">
                 <div>
-                    <div class="text_after_images_margins">Updating list of 50+ sources on distributed teams, remote
+                    <p class="text_after_images">Updating list of 50+ sources on distributed teams, remote
                         work, and
-                        how to make it all work better</div>
+                        how to make it all work better</p>
                 </div>
             </div>
-            <div class="attribute">
+            <div class="atribute">
                 <img class="second_page_photos" width="304px" height="176px" src="photos\5.jpg"
                     alt="A few words about this blog platform">
                 <div>
-                    <div class="text_after_images_78">A few words about this blog platform, Ghost, and how this site was
-                        made</div>
+                    <p class="text_after_images">A few words about this blog platform, Ghost, and how this site was
+                        made</p>
                 </div>
             </div>
-            <div class="attribute">
+            <div class="atribute">
                 <img class="second_page_photos" width="304px" height="176px" src="photos\6.jpg"
                     alt="modern remote working">
-                <div class="modern">
-                    <div class="text_after_images">How modern remote working tools get along with Old School Cowboy's
-                        methods
-                    </div>
+                <div>
+                    <p class="text_after_images">How modern remote working tools get along with Old School
+                        Cowboy's methods
+                    </p>
                 </div>
             </div>
 
+
+        </section>
+
+    </artcile>
+    <footer class="footer_black_square">
+        <div class="square_first_text">
+            <div class="bold_text scroll_text">DIGITAL PRODUCT DESIGN</div>
+            <div class="scroll_text" class="work">REMOTE WORK</div>
+            <div class="bold_text scroll_text">UX DESIGN</div>
+            <div class="scroll_text" class="teams">DISTRIBUTED TEAMS</div>
+            <div class="bold_text scroll_text">CREATIVITY</div>
+            <div class="scroll_text" class="strategy">STRATEGY</div>
+            <div class="bold_text scroll_text">SUSPENSE</div>
+            <div class="scroll_text" class="growth">GROWTH</div>
         </div>
 
-        <div class="black_square">
-            <div class="square_first_text">
 
-                <div class="bold_text_center">DIGITAL PRODUCT DESIGN</div>
-                <div class="text_сenter" class="work">REMOTE WORK</div>
-                <div class="bold_text_center">UX DESIGN</div>
-                <div class="text_сenter" class="teams">DISTRIBUTED TEAMS</div>
-                <div class="bold_text_center">CREATIVITY</div>
-                <div class="text_сenter" class="strategy">STRATEGY</div>
-                <div class="bold_text_center">SUSPENSE</div>
-                <div class="text_сenter" class="growth">GROWTH</div>
-            </div>
 
-            <div class="text_сenter">
-                <div class="bottom_rose"><img width="245px" height="35px" src="photos\NORDIC ROSE.png"
-                        alt="NORDIC ROSE">
-                </div>
-
-                <div class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
-                    egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</div>
-                <div class="links">
-                    <div class="one_link">Twitter</div>
-                    <div class="one_link">Linkedln</div>
-                    <div class="one_link">RSS</div>
-                </div>
-                <div class="authors">© 2012–2020 Nordic Rose Co. All rights reserved</div>
-            </div>
-
+        <div class="bottom_rose"><img width="245px" height="35px" src="photos\NORDIC ROSE.png" alt="NORDIC ROSE">
 
         </div>
+        <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
+            egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</p>
+        <div class="links_div">
+            <ul class="links">
+                <li><a class="link" href="">Twitter</a></li>
+                <li><a class="link" href="">Linkedln</a></li>
+                <li><a class="link" href="">RSS</a></li>
+            </ul>
+        </div>
 
-    </div>
+        <p class="copy_text">© 2012–2020 Nordic Rose Co.  All rights reserved.</p>
 
-
+    </footer>
 </body>
 
 </html>
