--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
             <h1>
                 <picture>
                     <source media="(max-width:854px)" srcset="photos\mobile_rose.png" />
-                    <source media="(min-width:854px)" srcset="photos\desktop_rose.png" />
+                    <source media="(min-width:854px)" width="395px" height="38px" srcset="photos\desktop_rose.png" />
                     <img class="rose" width="217px" height="24px" src="photos\mobile_rose.png" alt="NORDIC ROSE">
                 </picture>
             </h1>
         </div>
-
+        <div class="desktop_menu">
+            <p class="first_part">BLOG</p>
+            <p class="second_part">ABOUT</p>
+            <p class="third_part">LINKS</p>
+            <p class="fouth_part">PROJECTS</p>
+        </div>
         <div class="top_padding_burger"><img width="25px" height="16px" src="photos\burger.png" alt="burger">
         </div>
     </header>
@@ -49,53 +54,56 @@
         </section>
         <section class="section_with_photo">
             <h2 class="articles">All articles</h2>
-            <div class="atribute">
-                <img class="second_page_photos" width="304px" height="176px" src="photos\1.jpg"
-                    alt="Granny gives everyone the finger">
-                <div>
-                    <p class="text_after_images">Granny gives everyone the finger, and other tips from OFFF
-                        Barcelona</p>
+            <div class="div_with_photo">
+                <div class="atribute">
+                    <img class="second_page_photos" width="304px" height="176px" src="photos\1.jpg"
+                        alt="Granny gives everyone the finger">
+                    <div>
+                        <p class="text_after_images">Granny gives everyone the finger, and other tips from OFFF
+                            Barcelona</p>
+                    </div>
+                </div>
+                <div class="atribute">
+                    <img class="second_page_photos" width="304px" height="176px" src="photos\2.jpg" alt="Hello world">
+                    <div>
+                        <p class="text_after_images">Hello world, or, in other words, why this blog exists
+                        </p>
+                    </div>
+                </div>
+                <div class="atribute">
+                    <img class="second_page_photos" width="304px" height="176px" src="photos\3.jpg"
+                        alt="regarding how wework">
+                    <div>
+                        <p class="text_after_images">Here are some things you should know regarding how we work </p>
+                    </div>
+                </div>
+                <div class="atribute">
+                    <img class="second_page_photos" width="304px" height="176px" src="photos\4.jpg" alt="remote work">
+                    <div>
+                        <p class="text_after_images">Updating list of 50+ sources on distributed teams, remote
+                            work, and
+                            how to make it all work better</p>
+                    </div>
+                </div>
+                <div class="atribute">
+                    <img class="second_page_photos" width="304px" height="176px" src="photos\5.jpg"
+                        alt="A few words about this blog platform">
+                    <div>
+                        <p class="text_after_images">A few words about this blog platform, Ghost, and how this site was
+                            made</p>
+                    </div>
+                </div>
+                <div class="atribute">
+                    <img class="second_page_photos" width="304px" height="176px" src="photos\6.jpg"
+                        alt="modern remote working">
+                    <div>
+                        <p class="text_after_images">How modern remote working tools get along with Old School
+                            Cowboy's methods
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="atribute">
-                <img class="second_page_photos" width="304px" height="176px" src="photos\2.jpg" alt="Hello world">
-                <div>
-                    <p class="text_after_images">Hello world, or, in other words, why this blog exists
-                    </p>
-                </div>
-            </div>
-            <div class="atribute">
-                <img class="second_page_photos" width="304px" height="176px" src="photos\3.jpg"
-                    alt="regarding how wework">
-                <div>
-                    <p class="text_after_images">Here are some things you should know regarding how we work </p>
-                </div>
-            </div>
-            <div class="atribute">
-                <img class="second_page_photos" width="304px" height="176px" src="photos\4.jpg" alt="remote work">
-                <div>
-                    <p class="text_after_images">Updating list of 50+ sources on distributed teams, remote
-                        work, and
-                        how to make it all work better</p>
-                </div>
-            </div>
-            <div class="atribute">
-                <img class="second_page_photos" width="304px" height="176px" src="photos\5.jpg"
-                    alt="A few words about this blog platform">
-                <div>
-                    <p class="text_after_images">A few words about this blog platform, Ghost, and how this site was
-                        made</p>
-                </div>
-            </div>
-            <div class="atribute">
-                <img class="second_page_photos" width="304px" height="176px" src="photos\6.jpg"
-                    alt="modern remote working">
-                <div>
-                    <p class="text_after_images">How modern remote working tools get along with Old School
-                        Cowboy's methods
-                    </p>
-                </div>
-            </div>
+
 
 
         </section>
@@ -115,7 +123,14 @@
 
 
 
-        <div class="bottom_rose"><img width="245px" height="35px" src="photos\NORDIC ROSE.png" alt="NORDIC ROSE">
+        <div class="bottom_rose">
+            <picture>
+                <source media="(max-width:854px)" width="245px" height="35px" srcset="photos\bottom_rose_mobile.png" />
+                <source media="(min-width:854px)" width="300px" height="40px" srcset="photos\bottom_rose_mobile.png" />
+                <img src="photos\bottom_rose_mobile.png"  alt="NORDIC ROSE">
+            </picture>
+            
+            
 
         </div>
         <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
@@ -126,7 +141,7 @@
                 <li><a class="link" href="">Linkedln</a></li>
                 <li><a class="link" href="">RSS</a></li>
             </ul>
-        </div> 
+        </div>
 
         <p class="copy_text">© 2012–2020 Nordic Rose Co.  All rights reserved.</p>
 
