final commit of first page

--- a/index2.html
+++ b/index2.html
@@ -104,8 +104,8 @@
                     contrast to cursory wisdom in some of the established channels.</p>
             </div>
             <div class="article_section_footer">
-                <p class="section_footer_text">Share:</p> 
-                <div class="table_div_footer">
+                <p class="section_footer_text">Share:</p>
+                <div class="table_footer">
                     <table class="table_of_contact">
                         <td class="facebook"><a href=""><img src="photos\facebook.png" width="20px" height="16px"
                                     alt="facebook"></a></td>
@@ -127,7 +127,7 @@
         </section>
         <section class="additional_articles">
             <h2 class="read_next">What to read next</h2>
-            <div class="div_with_photo">
+            <div class="photo">
                 <div class="atribute">
                     <img class="second_page_photos" width="304px" height="176px" src="photos\1.jpg"
                         alt="Granny gives everyone the finger">
