--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             </h1>
         </div>
         <div class="desktop_menu">
-            <p class="first_part">BLOG</p>
-            <p class="second_part">ABOUT</p>
-            <p class="third_part">LINKS</p>
-            <p class="fouth_part">PROJECTS</p>
+            <a href="" class="first_part">BLOG</a>
+            <a href="" class="second_part">ABOUT</a>
+            <a href="" class="third_part">LINKS</a>
+            <a href="" class="fouth_part">PROJECTS</a>
         </div>
         <div class="top_padding_burger"><img width="25px" height="16px" src="photos\burger.png" alt="burger">
         </div>
@@ -54,7 +54,7 @@
         </section>
         <section class="section_with_photo">
             <h2 class="articles">All articles</h2>
-            <div class="div_with_photo">
+            <div class="photo">
                 <div class="atribute">
                     <img class="second_page_photos" width="304px" height="176px" src="photos\1.jpg"
                         alt="Granny gives everyone the finger">
@@ -103,11 +103,7 @@
                     </div>
                 </div>
             </div>
-
-
-
         </section>
-
     </artcile>
     <footer class="footer_black_square">
         <div class="square_first_text">
@@ -120,18 +116,12 @@
             <div class="bold_text scroll_text">SUSPENSE</div>
             <div class="scroll_text" class="growth">GROWTH</div>
         </div>
-
-
-
         <div class="bottom_rose">
             <picture>
                 <source media="(max-width:854px)" width="245px" height="35px" srcset="photos\bottom_rose_mobile.png" />
                 <source media="(min-width:854px)" width="300px" height="40px" srcset="photos\bottom_rose_mobile.png" />
-                <img src="photos\bottom_rose_mobile.png"  alt="NORDIC ROSE">
+                <img src="photos\bottom_rose_mobile.png" alt="NORDIC ROSE">
             </picture>
-            
-            
-
         </div>
         <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
             egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</p>
@@ -142,9 +132,7 @@
                 <li><a class="link" href="">RSS</a></li>
             </ul>
         </div>
-
         <p class="copy_text">© 2012–2020 Nordic Rose Co.  All rights reserved.</p>
-
     </footer>
 </body>
 
