second page commit v2

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
         <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
             egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</p>
-        <div class="links_div">
+        <div class="links_padding">
             <ul class="links">
                 <li><a class="link" href="">Twitter</a></li>
                 <li><a class="link" href="">Linkedln</a></li>
