--- a/index2.html
+++ b/index2.html
@@ -27,10 +27,10 @@
             </h1>
         </div>
         <div class="desktop_menu">
-            <p class="first_part">BLOG</p>
-            <p class="second_part">ABOUT</p>
-            <p class="third_part">LINKS</p>
-            <p class="fouth_part">PROJECTS</p>
+            <a href="" class="first_part">BLOG</a>
+            <a href="" class="second_part">ABOUT</a>
+            <a href="" class="third_part">LINKS</a>
+            <a href="" class="fouth_part">PROJECTS</a>
         </div>
         <div class="top_padding_burger"><img width="25px" height="16px" src="photos\burger.png" alt="burger">
         </div>
