second page commit v2 pls

--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
             <a href="" class="first_part">BLOG</a>
             <a href="" class="second_part">ABOUT</a>
             <a href="" class="third_part">LINKS</a>
-            <a href="" class="fouth_part">PROJECTS</a>
+            <a href="" class="fouth_part">PROJECTS</a> 
         </div>
         <div class="top_padding_burger"><img width="25px" height="16px" src="photos\burger.png" alt="burger">
         </div>
@@ -60,7 +60,7 @@
                     <p class="author_name">Mika Matikainen</p>
                     <p class="author_data"> Apr 15, 2020 · 4 min read</p>
                 </div>
-                <div class="table_div">
+                <div class="table_with_photo">
                     <table class="table_of_contact">
                         <td class="facebook"><a href=""><img src="photos\facebook.png" width="20px" height="16px"
                                     alt="facebook"></a></td>
