--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             </h1>
         </div>
         <div class="desktop_menu">
-            <p class="first_part">BLOG</p>
-            <p class="second_part">ABOUT</p>
-            <p class="third_part">LINKS</p>
-            <p class="fouth_part">PROJECTS</p>
+            <a href="" class="first_part">BLOG</a>
+            <a href="" class="second_part">ABOUT</a>
+            <a href="" class="third_part">LINKS</a>
+            <a href="" class="fouth_part">PROJECTS</a>
         </div>
         <div class="top_padding_burger"><img width="25px" height="16px" src="photos\burger.png" alt="burger">
         </div>
@@ -51,7 +51,7 @@
         </section>
         <section class="section_with_photo">
             <h2 class="articles">All articles</h2>
-            <div class="div_with_photo">
+            <div class="photo">
                 <div class="atribute">
                     <img class="second_page_photos" width="304px" height="176px" src="photos\1.jpg"
                         alt="Granny gives everyone the finger">
@@ -122,7 +122,7 @@
         </div>
         <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat
             egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula.</p>
-        <div class="links_div">
+        <div class="links_padding">
             <ul class="links">
                 <li><a class="link" href="">Twitter</a></li>
                 <li><a class="link" href="">Linkedln</a></li>
