first adaptive commit

--- a/post.html
+++ b/post.html
@@ -90,8 +90,7 @@
             <div class="rectangle">
                 <picture>
                     <source media="(max-width:854px)" width="375" height="250" srcset="photos\rectangle.png" />
-                    <source media="(min-width:854px)" width="854" height="570"
-                        srcset="photos\rectangle_desktop.jpg" />
+                    <source media="(min-width:854px)" width="854" height="570" srcset="photos\rectangle_desktop.jpg" />
                     <img src="photos\rectangle_desktop.jpg" alt="rectangle">
                 </picture>
                 <figcaption class="rectangle_caption">Image caption centered this way and I’ll make this a bit longer to
@@ -133,15 +132,15 @@
                                     src="photos\twitter.png" width="20" height="16" alt="twitter">
                                 <p class="share_on">Share on Twitter </p>
                             </a></td>
-                        <td class="phone"><a href=""><img src="photos\phone.png" width="20" height="16"
-                                    alt="phone"></a></td>
+                        <td class="phone"><a href=""><img src="photos\phone.png" width="20" height="16" alt="phone"></a>
+                        </td>
                     </table>
                 </div>
                 <p class="section_footer_text tags">Tags: <a href="" class="black_link">product design</a>, <a href=""
                         class="black_link">culture</a></p>
             </div>
             <div class="comment_from_author">
-                <img class="big_avatar" src="photos\big_avatar.png" width="70" height="70" alt="big avatar">
+                <div class="big_avatar"><img src="photos\big_avatar.png" width="70" height="70" alt="big avatar"></div>
                 <p class="big_avatar_text"><span class="big_avatar_text_bold">Mika Matikainen</span> is a Design Founder
                     & Advisor, Berlin School of Creative Leadership Executive MBA participant, Zippie advisor, Wolt
                     co-founder, and Nordic Rose stakeholder. </p>
@@ -225,10 +224,8 @@
 
             <div class="bottom_rose">
                 <picture>
-                    <source media="(max-width:854px)" width="245" height="35"
-                        srcset="photos\bottom_rose_mobile.png" />
-                    <source media="(min-width:854px)" width="300" height="40"
-                        srcset="photos\bottom_rose_mobile.png" />
+                    <source media="(max-width:854px)" width="245" height="35" srcset="photos\bottom_rose_mobile.png" />
+                    <source media="(min-width:854px)" width="300" height="40" srcset="photos\bottom_rose_mobile.png" />
                     <img src="photos\bottom_rose_mobile.png" alt="NORDIC ROSE">
                 </picture>
 
